# RL4design

./: LICENSE  README.md  install.sh  main.py  requirements.txt
experiments/vec_patch_shape/: config.py  model.py  optimize_rl.py  utils.py
experiments/vec_patch_shape/data/: base.vxa
experiments/vec_patch_voxcraft/: config.py  optimize_rl.py  utils.py
experiments/vec_patch_voxcraft/data/: base.vxa
launch/: run_experiment.py  snapshot.py
navigator/: main.py  prompter.py  trial.py  utils.py
navigator/functions/multi/: draw_reward_curves.py  draw_robot_metrics_curves.py  draw_volume_task_result.py  draw_voxcraft_task_result.py
navigator/functions/single/: compute_robot_metrics.py  draw_generation_process.py  draw_robots.py  visualize_robot_history.py
renesis/: __init__.py
renesis/env/: shape.py  utils.py  voxcraft.py
renesis/env_model/: base.py  growth.py  patch.py  vec_patch.py
renesis/sim/: __init__.py
renesis/sim/voxcraft_viz_src/: CMakeLists.txt  main.cpp
renesis/sim/voxcraft_viz_src/demos/: m190.history  m805.history
renesis/sim/voxcraft_viz_src/lib/osmesa/: CMakeLists.txt
renesis/sim/voxcraft_viz_src/lib/osmesa/glu/: CMakeLists.txt
renesis/sim/voxcraft_viz_src/lib/osmesa/src/: CMakeLists.txt
renesis/sim/voxcraft_viz_src/lib/pybind11/tests/: test_pytypes.py
renesis/sim/voxcraft_viz_src/lib/pybind11/tests/extra_python_package/: test_files.py
renesis/sim/voxcraft_viz_src/src/: VX_GLInclude.h  VX_GL_Utils.cpp  VX_GL_Utils.h  VX_Renderer.cpp  VX_Renderer.h  VX_Vec3D.h  init.cpp
renesis/utils/: debug.py  metrics.py  plotter.py  robot.py  shape_decomposition.py  virtual_shape.py  voxcraft.py
